Add package methods to get by id + refactoring
- Refactor decoding responses
- Add mappers
- Rebuild package models
- Optimize other package methods
