# docs/swagger.json
@@ -120,6 +120,50 @@
                 }
             }
         },
+        "/api/v1/packets/{id}": {
+            "get": {
+                "description": "Get packet details by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "packets"
+                ],
+                "summary": "Get packet by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Packet ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ChaikaGoods_internal_handler_schemas.GetPacketByIDResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/products": {
             "get": {
                 "description": "Get all products from the database",
@@ -333,16 +377,9 @@
                     "description": "Сведения о новом пакете",
                     "allOf": [
                         {
-                            "$ref": "#/definitions/ChaikaGoods_internal_models.Package"
+                            "$ref": "#/definitions/ChaikaGoods_internal_handler_schemas.PackageSchema"
                         }
                     ]
-                },
-                "packet_content": {
-                    "description": "Содержимое пакета",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/ChaikaGoods_internal_models.PackageContent"
-                    }
                 }
             }
         },
@@ -353,7 +390,7 @@
                 "err": {
                     "type": "string"
                 },
-                "packet_id": {
+                "id": {
                     "description": "ID созданного пакета",
                     "type": "integer"
                 }
@@ -375,7 +412,7 @@
                 "err": {
                     "type": "string"
                 },
-                "product_id": {
+                "id": {
                     "type": "integer"
                 }
             }
@@ -418,6 +455,18 @@
                 }
             }
         },
+        "ChaikaGoods_internal_handler_schemas.GetPacketByIDResponse": {
+            "description": "Ответ на запрос на получение пакета по его ID",
+            "type": "object",
+            "properties": {
+                "err": {
+                    "type": "string"
+                },
+                "packet": {
+                    "$ref": "#/definitions/ChaikaGoods_internal_handler_schemas.PackageSchema"
+                }
+            }
+        },
         "ChaikaGoods_internal_handler_schemas.GetProductByIDResponse": {
             "description": "Ответ на запрос на получение продукта по его ID",
             "type": "object",
@@ -427,6 +476,37 @@
                 },
                 "product": {
                     "$ref": "#/definitions/ChaikaGoods_internal_handler_schemas.ProductSchema"
+                }
+            }
+        },
+        "ChaikaGoods_internal_handler_schemas.PackageContentSchema": {
+            "type": "object",
+            "properties": {
+                "product_id": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
+        "ChaikaGoods_internal_handler_schemas.PackageSchema": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ChaikaGoods_internal_handler_schemas.PackageContentSchema"
+                    }
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "package_name": {
+                    "type": "string"
                 }
             }
         },
@@ -460,7 +540,7 @@
                 "packets": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/ChaikaGoods_internal_models.Package"
+                        "$ref": "#/definitions/ChaikaGoods_internal_handler_schemas.PackageSchema"
                     }
                 }
             }
@@ -480,37 +560,6 @@
             "properties": {
                 "err": {
                     "type": "string"
-                }
-            }
-        },
-        "ChaikaGoods_internal_models.Package": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "package_name": {
-                    "type": "string"
-                }
-            }
-        },
-        "ChaikaGoods_internal_models.PackageContent": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "package_id": {
-                    "type": "integer"
-                },
-                "product_id": {
-                    "type": "integer"
-                },
-                "quantity": {
-                    "type": "integer"
                 }
             }
         }
